# duo-talk-director

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
.claude/: CLAUDE.md
experiments/: phase22_evaluation.py
src/duo_talk_director/: __init__.py  director_hybrid.py  director_llm.py  director_minimal.py  hint_injector.py  interfaces.py  state_diff_injector.py
src/duo_talk_director/checks/: __init__.py  action_sanitizer.py  context_check.py  format_check.py  praise_check.py  setting_check.py  thought_check.py  tone_check.py
src/duo_talk_director/config/: __init__.py  persona_rules.yaml  thresholds.py
src/duo_talk_director/llm/: __init__.py  evaluator.py  prompts.py
src/duo_talk_director/logging/: __init__.py  log_store.py  sanitizer_logger.py  thought_logger.py
src/duo_talk_director/rag/: __init__.py  fact_card.py  persona_rag.py  rag_manager.py  session_rag.py
src/duo_talk_director/state/: __init__.py  extractor.py  models.py  signals.py
tests/: conftest.py  test_action_sanitizer.py  test_checks.py  test_context_check.py  test_director_hybrid.py  test_director_llm.py  test_director_minimal.py  test_llm_evaluator.py  test_logging.py  test_rag.py  test_state_extractor.py  test_state_extractor_precision.py  test_thought_check.py  test_thresholds.py  test_tone_check_v21.py
tests/integration/: test_with_core.py
